--- a/views/index.ejs
+++ b/views/index.ejs
@@ -96,7 +96,6 @@
             padding:0;
             margin:0;
             position:sticky;
-            background-color:rgb(6, 178, 247);
             border-radius:5px;
         }
         #replies-column {
@@ -143,7 +142,7 @@
             font-size: 25px;
         }
         #map {
-            height:95vh;
+            height:600px;
             margin:0;
             padding:0;
             border-radius:10px;                
@@ -214,7 +213,7 @@ function removeLoader(){
     </div> 
     <div class="container mt-3">       
           <div class="row">
-            <div id="map-column" class="d-none d-lg-block col-3 mx-6 p-3 mb-2 bg-dark mt-5">
+            <div id="map-column" class="d-none d-lg-block col-3 mx-6 p-3 mb-2 mt-5">
                 <div id="map-container">
                     <div id="map">
     
